--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -22,6 +22,11 @@
             <version>7.09</version>
         </dependency>
         <dependency>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.ibm</groupId>
             <artifactId>lsid-client</artifactId>
             <version>1.1.3</version>
