--- a/mda/.classpath
+++ b/mda/.classpath
@@ -6,11 +6,11 @@
   <classpathentry kind="var" path="M2_REPOcommons-lang/commons-lang/2.1/commons-lang-2.1.jar"/>
   <classpathentry kind="var" path="M2_REPOcommons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
   <classpathentry kind="var" path="M2_REPOlog4j/log4j/1.2.12/log4j-1.2.12.jar"/>
-  <classpathentry kind="var" path="M2_REPOorg/andromda/andromda-core/3.2-SNAPSHOT/andromda-core-3.2-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPOorg/andromda/andromda-utils/3.2-SNAPSHOT/andromda-utils-3.2-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPOorg/andromda/metafacades/andromda-metafacades-uml/3.2-SNAPSHOT/andromda-metafacades-uml-3.2-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPOorg/andromda/translationlibraries/andromda-ocl-translation-core/3.2-SNAPSHOT/andromda-ocl-translation-core-3.2-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPOorg/andromda/translationlibraries/andromda-ocl-validation-library/3.2-SNAPSHOT/andromda-ocl-validation-library-3.2-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPOorg/andromda/andromda-core/3.2/andromda-core-3.2.jar"/>
+  <classpathentry kind="var" path="M2_REPOorg/andromda/andromda-utils/3.2/andromda-utils-3.2.jar"/>
+  <classpathentry kind="var" path="M2_REPOorg/andromda/metafacades/andromda-metafacades-uml/3.2/andromda-metafacades-uml-3.2.jar"/>
+  <classpathentry kind="var" path="M2_REPOorg/andromda/translationlibraries/andromda-ocl-translation-core/3.2/andromda-ocl-translation-core-3.2.jar"/>
+  <classpathentry kind="var" path="M2_REPOorg/andromda/translationlibraries/andromda-ocl-validation-library/3.2/andromda-ocl-validation-library-3.2.jar"/>
   <classpathentry kind="var" path="M2_REPOxml-apis/xml-apis/1.0.b2/xml-apis-1.0.b2.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="target/classes"/>
