--- a/.classpath
+++ b/.classpath
@@ -39,11 +39,11 @@
   <classpathentry kind="var" path="M2_REPOjline/jline/0.9.5/jline-0.9.5.jar"/>
   <classpathentry kind="var" path="M2_REPOlog4j/log4j/1.2.12/log4j-1.2.12.jar"/>
   <classpathentry kind="var" path="M2_REPOlogkit/logkit/1.0.1/logkit-1.0.1.jar"/>
-  <classpathentry kind="var" path="M2_REPOorg/andromda/andromda-core/3.2-SNAPSHOT/andromda-core-3.2-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPOorg/andromda/andromda-utils/3.2-SNAPSHOT/andromda-utils-3.2-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPOorg/andromda/metafacades/andromda-metafacades-uml/3.2-SNAPSHOT/andromda-metafacades-uml-3.2-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPOorg/andromda/translationlibraries/andromda-ocl-translation-core/3.2-SNAPSHOT/andromda-ocl-translation-core-3.2-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPOorg/andromda/translationlibraries/andromda-ocl-validation-library/3.2-SNAPSHOT/andromda-ocl-validation-library-3.2-SNAPSHOT.jar"/>
+  <classpathentry kind="var" path="M2_REPOorg/andromda/andromda-core/3.2/andromda-core-3.2.jar"/>
+  <classpathentry kind="var" path="M2_REPOorg/andromda/andromda-utils/3.2/andromda-utils-3.2.jar"/>
+  <classpathentry kind="var" path="M2_REPOorg/andromda/metafacades/andromda-metafacades-uml/3.2/andromda-metafacades-uml-3.2.jar"/>
+  <classpathentry kind="var" path="M2_REPOorg/andromda/translationlibraries/andromda-ocl-translation-core/3.2/andromda-ocl-translation-core-3.2.jar"/>
+  <classpathentry kind="var" path="M2_REPOorg/andromda/translationlibraries/andromda-ocl-validation-library/3.2/andromda-ocl-validation-library-3.2.jar"/>
   <classpathentry kind="var" path="M2_REPOorg/apache/axis/axis/1.4/axis-1.4.jar"/>
   <classpathentry kind="var" path="M2_REPOorg/hibernate/hibernate/3.1.3/hibernate-3.1.3.jar"/>
   <classpathentry kind="var" path="M2_REPOorg/springframework/spring/1.2.7/spring-1.2.7.jar"/>
