Fixed some formatting issues, and added the web module to the main project

--- a/pom.xml
+++ b/pom.xml
@@ -366,7 +366,7 @@
         <module>jaxb2</module>
         <module>backend</module>
         <module>webapp</module>
-        <!--<module>web</module>-->
+        <module>web</module>
     </modules>
     <properties>
         <!--
