--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- This file is part of SyMBA.-->
+<!--- This file is part of SyMBA.-->
 <!-- SyMBA is covered under the GNU Lesser General Public License (LGPL).-->
 <!-- Copyright (C) 2007 jointly held by Allyson Lister, Olly Shaw, and their employers.-->
 <!-- To view the full licensing information for this software and ALL other files contained-->
