--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <groupId>fugeOM</groupId>
     <artifactId>SyMBA</artifactId>
     <packaging>pom</packaging>
-    <version>8.03</version>
+    <version>8.05</version>
     <name>SyMBA</name>
     <url>http://symba.sourceforge.net</url>
     <description>The Systems and Molecular Biology data Archive (SyMBA) Project. The Centre for Integrated Systems
@@ -107,12 +107,41 @@
         </developer>
     </developers>
 
-    <!-- You will need the correct permissions to be able to publish here.-->
+    <!--
+     mvn site:deploy : For SyMBA Developers only (You will need the correct permissions to be able to publish here.)
+
+     To prevent accidental copying, the shell.sf.net <site> element starts out commented out. Please ensure this remains
+     the case when you are committing changes to SVN.
+     mvn site:deploy JUST copies the already-generated site docs. If you make a change to any of the APT files, you
+     must run mvn site:site FIRST, to re-generate the site docs, THEN mvn site:deploy to copy them to the final location
+     described below in <distributionManagement>.
+     I suggest testing the maven-generated site before publishing to the symba website. Change the <url> element of the
+     local-test <site> element below to local directory that is right for you, then run mvn site:deploy and check the
+     resulting site. If all looks OK, comment-out the local-test <site> element
+     and un-comment the shell.sf.net <site> element. Only developers with write-access to the shell.sf.net server and
+     the symba group area will be able to perform this goal. Run mvn:site-deploy again.
+
+     The only problem with the site deployment at the moment is that it doesn't copy the non-html books properly.
+     This means that the pdf version of the installation instructions doesn't get put on the server. So, if you could
+     do the following any time you make a change to one of the books:
+     1. cd to the books/ subdir
+     2. run "mvn doxia:render-books"
+     3. go back up to the top-level directory
+     4. run "mvn site:site"
+     5. run "mvn site:deploy" first on your local test then, once you're happy, to the FuGE website.
+     6. manually copy books/target/generated-site/pdf/installation/installation.pdf to shell.sf.net in the directory
+     /home/groups/s/sy/symba/htdocs/
+     7. Do the same for the general-information.pdf as you did in #6 for installation.pdf
+     -->
     <distributionManagement>
         <site>
-            <id>shell.sf.net</id>
-            <url>scp://shell.sf.net/home/groups/s/sy/symba/htdocs/</url>
+            <id>local-test</id>
+            <url>scp://localhost/media/share/website-test/</url>
         </site>
+        <!--<site>-->
+            <!--<id>shell.sf.net</id>-->
+            <!--<url>scp://shell.sf.net/home/groups/s/sy/symba/htdocs/</url>-->
+        <!--</site>-->
         <repository>
             <id>carmen</id>
             <name>Carmen release repository</name>
@@ -379,6 +408,7 @@
         <module>backend</module>
         <module>webapp-helper</module>
         <module>webapp</module>
+        <module>books</module>
         <!--<module>web</module>-->
     </modules>
     <properties>
