--- a/jaxb2/pom.xml
+++ b/jaxb2/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>fugeOM</groupId>
         <artifactId>SyMBA</artifactId>
-        <version>8.05</version>
+        <version>8.05-SNAPSHOT</version>
     </parent>
     <artifactId>jaxb2</artifactId>
     <packaging>jar</packaging>
