--- a/mda/pom.xml
+++ b/mda/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>fugeOM</groupId>
         <artifactId>SyMBA</artifactId>
-        <version>8.05</version>
+        <version>8.05-SNAPSHOT</version>
     </parent>
     <artifactId>mda</artifactId>
     <packaging>pom</packaging>
