--- a/symba-lsid-ws-resolver/pom.xml
+++ b/symba-lsid-ws-resolver/pom.xml
@@ -44,6 +44,13 @@
             <groupId>net.sourceforge.jena</groupId>
             <artifactId>jena</artifactId>
             <version>2.3</version>
+            <!-- The standard maven repos don't have the version that this dependency tree expects. We don't need it anyway. -->
+            <exclusions>
+                <exclusion>
+                    <artifactId>xmlbeans-jsr173-api</artifactId>
+                    <groupId>xmlbeans</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
